# yaCADpro

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindOCC.cmake
qml/: main.qml
